--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^12.5.1"
+    "cypress": "^12.5.1",
+    "cypress-file-upload": "^5.0.8"
   },
   "dependencies": {
     "cypress-xpath": "^2.0.1"
